--- a/front end/admin/branchManagement.html
+++ b/front end/admin/branchManagement.html
@@ -32,26 +32,23 @@
 </header>
 
 <main class="container">
-    <h1>Service Types Management</h1>
-
-    <div id="message" style="display: none; margin-bottom: 20px"></div>
-
+    <h1>Branches</h1>
     <div class="table-actions">
         <a href="add-branch.html" class="btn">Add New Branch</a>
     </div>
-
     <div class="table-container">
-        <table>
+        <table id="vehicleRecordsTable" data-sort-order="desc">
             <thead>
             <tr>
-                <th>Branch Id</th>
-                <th>Branch Name</th>
-                <th>Location</th>
-                <th>Manager Name</th>
+                <th onclick="sortTable(0)">Branch Id</th>
+                <th onclick="sortTable(1)">Branch Name</th>
+                <th onclick="sortTable(2)">Location</th>
+                <th onclick="sortTable(3)">Manager Name</th>
+                <th>Actions</th>
             </tr>
             </thead>
-            <tbody>
-            <!-- Users will load here by JavaScript -->
+            <tbody id="vehicleRecordsBody">
+            <!-- Populated by script.js -->
             </tbody>
         </table>
     </div>
@@ -80,6 +77,134 @@
     </div>
 </footer>
 
-<script src="../assets/js/user.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        fetch("http://localhost:8080/api/garages")
+            .then((response) => {
+                if (!response.ok) {
+                    throw new Error(`Network response was not ok: ${response.status}`);
+                }
+                return response.json();
+            })
+            .then((data) => {
+                const tbody = document.getElementById("vehicleRecordsBody");
+                tbody.innerHTML = "";
+
+                // Sort by branchId descending initially
+                data.sort((a, b) => b.branchId - a.branchId);
+                console.log(data);
+                data.forEach((branchManagement) => {
+                    const row = document.createElement("tr");
+                    const vehicleStr = JSON.stringify(branchManagement).replace(/'/g, "\\'");
+                    row.innerHTML = `
+            <td>VID00${branchManagement.branchId || "0"}</td>
+            <td>${branchManagement.name || ""}</td>
+            <td>${branchManagement.location || ""}</td>
+            <td>${branchManagement.managerName || ""}</td>
+            <td>
+              <a href="#" class="btn-edit" onclick='openEditModal(${vehicleStr})'><i class="fas fa-edit"></i></a>
+              <button class="btn-delete" onclick="deleteVehicle('${
+                        branchManagement.branchId
+                    }')"><i class="fas fa-trash"></i></button>
+            </td>
+          `;
+                    tbody.appendChild(row);
+                });
+            })
+            .catch((error) => {
+                console.error("Failed to load records:", error);
+                alert("Failed to load records.");
+            });
+    });
+
+    function openEditModal(branchManagement) {
+        console.log("branch data:",branchManagement);
+        try {
+            document.getElementById("updateBranchId").value = branchManagement.branchId || "";
+            document.getElementById("updateName").value = branchManagement.Name || "";
+            document.getElementById("updateLocation").value = branchManagement.location || "";
+            document.getElementById("updateManagerName").value = branchManagement.managerName || "";
+            document.getElementById("updateModal").classList.add("show");
+        } catch (error) {
+            console.error("Error populating modal:", error);
+            alert("Failed to load branchManagement data.");
+        }
+    }
+
+    function closeModal() {
+        document.getElementById("updateModal").classList.remove("show");
+    }
+
+    document.getElementById("updateVehicleForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const branchManagement = {
+            branchId: parseInt(document.getElementById("updateBranchId").value),
+            name: document.getElementById("updateName").value.trim(),
+            location: document.getElementById("updateLocation").value.trim(),
+            managerName: document.getElementById("updateManagerName").value.trim(),
+        };
+        console.log(branchManagement);
+
+        fetch(`http://localhost:8080/api/garages/${branchManagement.branchId}`, {
+            method: "PUT",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify(branchManagement),
+        })
+            .then((res) => {
+                if (!res.ok) throw new Error(`Update failed: ${res.status}`);
+                closeModal();
+                location.reload();
+            })
+            .catch((err) => {
+                console.error("Update error:", err);
+                alert("Failed to update the record.");
+            });
+    });
+
+    function deleteVehicle(branchId) {
+        if (confirm("Are you sure you want to delete this vehicle?")) {
+            fetch(`http://localhost:8080/api/garages/${branchId}`, {
+                method: "DELETE",
+            })
+                .then((response) => {
+                    if (!response.ok) {
+                        throw new Error(`Delete request failed: ${response.status}`);
+                    }
+                    location.reload();
+                })
+                .catch((error) => {
+                    console.error("Error deleting :", error);
+                    alert("Failed to delete record.");
+                });
+        }
+    }
+
+    function sortTable(columnIndex) {
+        const table = document.getElementById("vehicleRecordsTable");
+        const tbody = document.getElementById("vehicleRecordsBody");
+        const rows = Array.from(tbody.getElementsByTagName("tr"));
+        const isAscending = table.dataset.sortOrder !== "asc";
+
+        rows.sort((a, b) => {
+            const aText = a.cells[columnIndex].textContent.trim();
+            const bText = b.cells[columnIndex].textContent.trim();
+
+            if (columnIndex === 0 || columnIndex === 5) {
+                // Vehicle Id or Year (numeric)
+                return isAscending ? parseInt(aText) - parseInt(bText) : parseInt(bText) - parseInt(aText);
+            } else {
+                // Text columns
+                return isAscending ? aText.localeCompare(bText) : bText.localeCompare(bText);
+            }
+        });
+
+        tbody.innerHTML = "";
+        rows.forEach((row) => tbody.appendChild(row));
+        table.dataset.sortOrder = isAscending ? "asc" : "desc";
+    }
+</script>
 </body>
 </html>
