--- a/front end/user/vehicle.html
+++ b/front end/user/vehicle.html
@@ -320,5 +320,6 @@
     table.dataset.sortOrder = isAscending ? "asc" : "desc";
   }
 </script>
+<script src="../assets/js/auth.js"></script>
 </body>
 </html>
