--- a/front end/user/profile.html
+++ b/front end/user/profile.html
@@ -39,38 +39,22 @@
       <div id="message" style="display: none"></div>
 
       <div class="table-container">
-        <div class="filter-options">
-          <label for="vehicleFilter">Filter by Vehicle:</label>
-          <select id="vehicleFilter">
-            <option value="all">All Vehicles</option>
-            <!-- Will be populated by JavaScript -->
-          </select>
-
-          <label for="dateFilter">Filter by Date:</label>
-          <select id="dateFilter">
-            <option value="all">All Dates</option>
-            <option value="month">This Month</option>
-            <option value="year">This Year</option>
-          </select>
-        </div>
-
-        <table id="historyTable">
+        <table id="vehicleRecordsTable" data-sort-order="desc">
           <thead>
           <tr>
-            <th>Date</th>
-            <th>Vehicle</th>
-            <th>Service</th>
-            <th>Cost</th>
-            <th>Status</th>
-            <th>Details</th>
+            <th onclick="sortTable(1)">Plate Number</th>
+            <th onclick="sortTable(2)">Make</th>
+            <th onclick="sortTable(3)">Model</th>
+            <th onclick="sortTable(4)">Color</th>
           </tr>
           </thead>
-          <tbody>
-          <!-- Will be populated by JavaScript -->
+          <tbody id="vehicleRecordsBody">
+          <!-- Populated by script.js -->
           </tbody>
         </table>
       </div>
     </main>
+
       <footer>
       <div class="container">
         <div class="footer-content">
@@ -93,7 +77,143 @@
         <p>© 2025 AutoCare Pro. All Rights Reserved.</p>
       </div>
     </footer>
-  <script src="../assets/js/garage.js"></script>
+    <script src="../assets/js/garage.js"></script>
     <script src="../assets/js/auth.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        fetch("http://localhost:8080/api/vehicle")
+                .then((response) => {
+                  if (!response.ok) {
+                    throw new Error(`Network response was not ok: ${response.status}`);
+                  }
+                  return response.json();
+                })
+                .then((data) => {
+                  const tbody = document.getElementById("vehicleRecordsBody");
+                  tbody.innerHTML = "";
+
+                  const formatDate = (isoString) => {
+                    if (!isoString) return "";
+                    const date = new Date(isoString);
+                    return date.toISOString().split("T")[0];
+                  };
+
+                  // Sort by vehicleId descending initially
+                  data.sort((a, b) => b.vehicleId - a.vehicleId);
+                  console.log(data);
+                  data.forEach((vehicle) => {
+                    const row = document.createElement("tr");
+                    // Escape quotes in vehicle data to prevent JS injection
+                    const vehicleStr = JSON.stringify(vehicle).replace(/'/g, "\\'");
+                    row.innerHTML = `
+            <td>${vehicle.plateNumber || ""}</td>
+            <td>${vehicle.make || ""}</td>
+            <td>${vehicle.model || ""}</td>
+            <td>${vehicle.color || ""}</td>
+          `;
+                    tbody.appendChild(row);
+                  });
+                })
+                .catch((error) => {
+                  console.error("Failed to load vehicle records:", error);
+                  alert("Failed to load vehicle records.");
+                });
+      });
+
+      function openEditModal(vehicle) {
+        console.log("Vehicle data:", vehicle);
+        try {
+          document.getElementById("updateVehicleId").value = vehicle.vehicleId || "";
+          document.getElementById("updatePlateNumber").value = vehicle.plateNumber || "";
+          document.getElementById("updateMake").value = vehicle.make || "";
+          document.getElementById("updateModel").value = vehicle.model || "";
+          document.getElementById("updateColor").value = vehicle.color || "";
+          document.getElementById("updateYear").value = vehicle.year? vehicle.year.split("T")[0] : "2020-01-01";
+          document.getElementById("updateVIN").value = vehicle.vin || "";
+          document.getElementById("updateModal").classList.add("show");
+        } catch (error) {
+          console.error("Error populating modal:", error);
+          alert("Failed to load vehicle data.");
+        }
+      }
+
+      function closeModal() {
+        document.getElementById("updateModal").classList.remove("show");
+      }
+
+      document.getElementById("updateVehicleForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const vehicle = {
+          vehicleId: parseInt(document.getElementById("updateVehicleId").value),
+          plateNumber: document.getElementById("updatePlateNumber").value.trim(),
+          make: document.getElementById("updateMake").value.trim(),
+          model: document.getElementById("updateModel").value.trim(),
+          color: document.getElementById("updateColor").value.trim(),
+          year: document.getElementById("updateYear").value,
+          vin: document.getElementById("updateVIN").value.trim(),
+        };
+        console.log(vehicle);
+
+        fetch(`http://localhost:8080/api/vehicle/${vehicle.vehicleId}`, {
+          method: "PUT",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(vehicle),
+        })
+                .then((res) => {
+                  if (!res.ok) throw new Error(`Update failed: ${res.status}`);
+                  closeModal();
+                  location.reload();
+                })
+                .catch((err) => {
+                  console.error("Update error:", err);
+                  alert("Failed to update the vehicle record.");
+                });
+      });
+
+      function deleteVehicle(vehicleId) {
+        if (confirm("Are you sure you want to delete this vehicle?")) {
+          fetch(`http://localhost:8080/api/vehicle/${vehicleId}`, {
+            method: "DELETE",
+          })
+                  .then((response) => {
+                    if (!response.ok) {
+                      throw new Error(`Delete request failed: ${response.status}`);
+                    }
+                    location.reload();
+                  })
+                  .catch((error) => {
+                    console.error("Error deleting vehicle:", error);
+                    alert("Failed to delete vehicle record.");
+                  });
+        }
+      }
+
+      function sortTable(columnIndex) {
+        const table = document.getElementById("vehicleRecordsTable");
+        const tbody = document.getElementById("vehicleRecordsBody");
+        const rows = Array.from(tbody.getElementsByTagName("tr"));
+        const isAscending = table.dataset.sortOrder !== "asc";
+
+        rows.sort((a, b) => {
+          const aText = a.cells[columnIndex].textContent.trim();
+          const bText = b.cells[columnIndex].textContent.trim();
+
+          if (columnIndex === 0 || columnIndex === 5) {
+            // Vehicle Id or Year (numeric)
+            return isAscending ? parseInt(aText) - parseInt(bText) : parseInt(bText) - parseInt(aText);
+          } else {
+            // Text columns
+            return isAscending ? aText.localeCompare(bText) : bText.localeCompare(bText);
+          }
+        });
+
+        tbody.innerHTML = "";
+        rows.forEach((row) => tbody.appendChild(row));
+        table.dataset.sortOrder = isAscending ? "asc" : "desc";
+      }
+    </script>
   </body>
 </html>
