--- a/front end/user/schedule.html
+++ b/front end/user/schedule.html
@@ -1,127 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Service Schedule | AutoCare Pro</title>
-    <link rel="stylesheet" href="../assets/css/styles2.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="logo">
-          <img src="../assets/images/blue-car-logo.png" alt="AutoCare Pro Logo" />
-          <div class="logo-text">
-            Auto
-            <span>Care</span>
-            Pro
-          </div>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html" >Home</a></li>
-            <li><a href="vehicle.html">My Vehicle</a></li>
-            <li><a href="schedule.html" class="active">Schedule</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="profile.html" >Profile</a></li>
-            <li><a href="../index/index.html">Logout</a></li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Service Schedule | AutoCare Pro</title>
+  <link rel="stylesheet" href="../assets/css/styles2.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <style>
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 8px;
+      width: 400px;
+      position: relative;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .close-button {
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .modal.show {
+      display: block;
+    }
+
+    /* Modal form styles */
+    #updateScheduleForm label {
+      display: block;
+      margin-top: 10px;
+      font-weight: 600;
+    }
+
+    #updateScheduleForm input,
+    #updateScheduleForm select {
+      width: 100%;
+      padding: 6px 8px;
+      margin-top: 4px;
+      box-sizing: border-box;
+    }
+
+    #updateScheduleForm button {
+      margin-top: 15px;
+      padding: 10px 15px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    #updateScheduleForm button:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+<header>
+  <div class="header-container">
+    <div class="logo">
+      <img src="../assets/images/blue-car-logo.png" alt="AutoCare Pro Logo" />
+      <div class="logo-text">
+        Auto
+        <span>Care</span>
+        Pro
       </div>
-    </header>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="vehicle.html">My Vehicle</a></li>
+        <li><a href="schedule.html" class="active">Schedule</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="../index/index.html">Logout</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
-    <main class="container">
-      <h1>Upcoming & Past Scheduled Services</h1>
-        <a href="add-schedule.html" class="btn admin-link">
-          <i class="fas fa-plus"></i>
-          Add a new schedule
-        </a>
+<main class="container">
+  <h1>Upcoming & Past Scheduled Services</h1>
+  <div class="table-actions">
+    <a href="add-schedule.html" class="btn admin-link">
+      <i class="fas fa-plus"></i>
+      Add a new schedule
+    </a>
+  </div>
+  <div class="table-container">
+    <table id="scheduleTable" data-sort-order="desc">
+      <thead>
+      <tr>
+        <th onclick="sortSchedule(0)">Date</th>
+        <th onclick="sortSchedule(1)">Time</th>
+        <th onclick="sortSchedule(2)">Plate Number</th>
+        <th onclick="sortSchedule(3)">Service Type</th>
+        <th onclick="sortSchedule(4)">Status</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody id="scheduleBody">
+      <!-- JavaScript will populate this -->
+      </tbody>
+    </table>
+  </div>
 
-      <div class="table-container">
-        <table id="scheduleTable">
-        <thead>
-        <tr>
-          <th onclick="sortSchedule(0)">Date</th>
-          <th onclick="sortSchedule(1)">Time</th>
-          <th onclick="sortSchedule(2)">Plate Number</th>
-          <th onclick="sortSchedule(3)">Service Type</th>
-          <th onclick="sortSchedule(4)">Status</th>
-          <th>Action</th>
-        </tr>
-        </thead>
-        <tbody id="scheduleBody">
-        <!-- JavaScript will populate this -->
-        </tbody>
-      </table>
+  <!-- Update Modal -->
+  <div id="updateModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button" onclick="closeModal()">×</span>
+      <h2>Update Schedule</h2>
+      <form id="updateScheduleForm">
+        <input type="hidden" id="updateScheduleID" />
+        <label for="updateDate">Date</label>
+        <input type="date" id="updateDate" required />
+
+        <label for="updateTime">Time</label>
+        <input type="time" id="updateTime" required />
+
+        <label for="updatePlateNumber">Plate Number</label>
+        <input type="text" id="updatePlateNumber" required />
+
+        <label for="updateServiceType">Service Type</label>
+        <input type="text" id="updateServiceType" required />
+
+        <label for="updateStatus">Status</label>
+        <select id="updateStatus" required>
+          <option value="Scheduled">Scheduled</option>
+          <option value="Completed">Completed</option>
+          <option value="Cancelled">Cancelled</option>
+        </select>
+
+        <button type="submit" class="btn">Update</button>
+      </form>
+    </div>
+  </div>
+</main>
+
+<footer>
+  <div class="container">
+    <div class="footer-content">
+      <div>
+        <h3>Contact Us</h3>
+        <p>123 Rajapihilla Rd, Kurunegala</p>
+        <p>(037) 2640-640</p>
+        <p>support@autocarepro.com</p>
       </div>
-
-    </main>
-
-    <footer>
-      <div class="container">
-        <div class="footer-content">
-          <div>
-            <h3>Contact Us</h3>
-            <p>123 Rajapihilla Rd, Kurunegala</p>
-            <p>(037) 2640-640</p>
-            <p>support@autocarepro.com</p>
-          </div>
-          <div>
-            <h3>Quick Links</h3>
-            <p><a href="index.html" >Home</a></p>
-            <p><a href="vehicle.html">My Vehicle</a></p>
-            <p><a href="schedule.html">Schedule</a></p>
-            <p><a href="services.html">Services</a></p>
-            <p><a href="profile.html">Profile</a></p>
-            <p><a href="../index/index.html">Logout</a></p>
-          </div>
-        </div>
-        <p>© 2025 AutoCare Pro. All Rights Reserved.</p>
+      <div>
+        <h3>Quick Links</h3>
+        <p><a href="index.html">Home</a></p>
+        <p><a href="vehicle.html">My Vehicle</a></p>
+        <p><a href="schedule.html">Schedule</a></p>
+        <p><a href="services.html">Services</a></p>
+        <p><a href="profile.html">Profile</a></p>
+        <p><a href="../index/index.html">Logout</a></p>
       </div>
-    </footer>
+    </div>
+    <p>© 2025 AutoCare Pro. All Rights Reserved.</p>
+  </div>
+</footer>
 
-    <script src="../assets/js/auth.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    fetch("http://localhost:8080/api/schedules")
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error(`Network response was not ok: ${response.status}`);
+              }
+              return response.json();
+            })
+            .then((data) => {
+              const tbody = document.getElementById("scheduleBody");
+              tbody.innerHTML = "";
 
-    <script>
-      function sortSchedule(colIndex) {
-        const table = document.getElementById("scheduleTable");
-        const rows = Array.from(table.rows).slice(1);
-        rows.sort((a, b) => {
-          const aText = a.cells[colIndex].textContent.trim();
-          const bText = b.cells[colIndex].textContent.trim();
-          return aText.localeCompare(bText, undefined, { numeric: true });
-        });
-        rows.forEach((row) => table.tBodies[0].appendChild(row));
+              const formatDate = (isoString) => {
+                if (!isoString) return "";
+                const date = new Date(isoString);
+                return date.toISOString().split("T")[0];
+              };
+
+              const formatTime = (isoString) => {
+                if (!isoString) return "";
+                const date = new Date(isoString);
+                return date.toTimeString().split(" ")[0].slice(0, 5);
+              };
+
+              // Sort by date descending initially
+              data.sort((a, b) => new Date(b.date) - new Date(a.date));
+
+              data.forEach((schedule) => {
+                const row = document.createElement("tr");
+                // Escape quotes in schedule data to prevent JS injection
+                const scheduleStr = JSON.stringify(schedule).replace(/'/g, "\\'");
+                row.innerHTML = `
+                <td>${formatDate(schedule.date)}</td>
+                <td>${formatTime(schedule.date)}</td>
+                <td>${schedule.plateNumber || ""}</td>
+                <td>${schedule.serviceType || ""}</td>
+                <td>${schedule.status || ""}</td>
+                <td>
+                  <a href="#" class="btn-edit" onclick='openEditModal(${scheduleStr})'><i class="fas fa-edit"></i></a>
+                  <button class="btn-delete" onclick="deleteSchedule('${schedule.scheduleId}')"><i class="fas fa-trash"></i></button>
+                </td>
+              `;
+                tbody.appendChild(row);
+              });
+            })
+            .catch((error) => {
+              console.error("Failed to load schedules:", error);
+              alert("Failed to load schedules.");
+            });
+  });
+
+  function openEditModal(schedule) {
+    console.log("Schedule data:", schedule);
+    try {
+      document.getElementById("updateScheduleID").value = schedule.scheduleId || "";
+      document.getElementById("updateDate").value = schedule.date ? schedule.date.split("T")[0] : "";
+      document.getElementById("updateTime").value = schedule.date ? new Date(schedule.date).toTimeString().split(" ")[0].slice(0, 5) : "";
+      document.getElementById("updatePlateNumber").value = schedule.plateNumber || "";
+      document.getElementById("updateServiceType").value = schedule.serviceType || "";
+      document.getElementById("updateStatus").value = schedule.status || "Scheduled";
+      document.getElementById("updateModal").classList.add("show");
+    } catch (error) {
+      console.error("Error populating modal:", error);
+      alert("Failed to load schedule data.");
+    }
+  }
+
+  function closeModal() {
+    document.getElementById("updateModal").classList.remove("show");
+  }
+
+  document
+          .getElementById("updateScheduleForm")
+          .addEventListener("submit", function (e) {
+            e.preventDefault();
+
+            const schedule = {
+              scheduleId: document.getElementById("updateScheduleID").value,
+              date: `${document.getElementById("updateDate").value}T${document.getElementById("updateTime").value}:00.000Z`,
+              plateNumber: document.getElementById("updatePlateNumber").value.trim(),
+              serviceType: document.getElementById("updateServiceType").value.trim(),
+              status: document.getElementById("updateStatus").value,
+            };
+
+            fetch(`http://localhost:8080/api/schedules/${schedule.scheduleId}`, {
+              method: "PUT",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify(schedule),
+            })
+                    .then((res) => {
+                      if (!res.ok) throw new Error(`Update failed: ${res.status}`);
+                      closeModal();
+                      location.reload();
+                    })
+                    .catch((err) => {
+                      console.error("Update error:", err);
+                      alert("Failed to update the schedule.");
+                    });
+          });
+
+  function deleteSchedule(scheduleId) {
+    if (confirm("Are you sure you want to delete this schedule?")) {
+      fetch(`http://localhost:8080/api/schedules/${scheduleId}`, {
+        method: "DELETE",
+      })
+              .then((response) => {
+                if (!response.ok) {
+                  throw new Error(`Delete request failed: ${response.status}`);
+                }
+                location.reload();
+              })
+              .catch((error) => {
+                console.error("Error deleting schedule:", error);
+                alert("Failed to delete schedule.");
+              });
+    }
+  }
+
+  function sortSchedule(columnIndex) {
+    const table = document.getElementById("scheduleTable");
+    const tbody = document.getElementById("scheduleBody");
+    const rows = Array.from(tbody.getElementsByTagName("tr"));
+    const isAscending = table.dataset.sortOrder !== "asc";
+
+    rows.sort((a, b) => {
+      const aText = a.cells[columnIndex].textContent.trim();
+      const bText = b.cells[columnIndex].textContent.trim();
+
+      if (columnIndex === 0) { // Date column
+        return isAscending ? new Date(aText) - new Date(bText) : new Date(bText) - new Date(aText);
+      } else if (columnIndex === 1) { // Time column
+        return isAscending ? aText.localeCompare(bText) : bText.localeCompare(aText);
+      } else { // Text columns
+        return isAscending ? aText.localeCompare(bText) : bText.localeCompare(aText);
       }
+    });
 
-      document.addEventListener("DOMContentLoaded", () => {
-        if (!db.currentUser) {
-          window.location.href = "login.html";
-          return;
-        }
-
-        const userId = db.currentUser.id;
-        const scheduleBody = document.getElementById("scheduleBody");
-        const history = db.serviceHistory.filter((s) => s.userId === userId);
-
-        scheduleBody.innerHTML = "";
-        history.forEach((s) => {
-          const vehicle = db.cars.find((c) => c.id === s.vehicleId) || {};
-          const service = db.services.find((svc) => svc.id === s.serviceId) || {};
-          const row = document.createElement("tr");
-          const date = new Date(s.date);
-          row.innerHTML = `
-      <td>${date.toLocaleDateString()}</td>
-      <td>${date.toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}</td>
-      <td>${vehicle.make} ${vehicle.model}</td>
-      <td>${service.name}</td>
-      <td><span class="status-badge status-${s.status.toLowerCase()}">${s.status}</span></td>
-      <td>${s.notes || ""}</td>
-    `;
-          scheduleBody.appendChild(row);
-        });
-      });
-    </script>
-  </body>
+    tbody.innerHTML = "";
+    rows.forEach((row) => tbody.appendChild(row));
+    table.dataset.sortOrder = isAscending ? "asc" : "desc";
+  }
+</script>
+</body>
 </html>
