--- a/front end/user/vehicle.html
+++ b/front end/user/vehicle.html
@@ -302,23 +302,40 @@
     const rows = Array.from(tbody.getElementsByTagName("tr"));
     const isAscending = table.dataset.sortOrder !== "asc";
 
-    rows.sort((a, b) => {
-      const aText = a.cells[columnIndex].textContent.trim();
-      const bText = b.cells[columnIndex].textContent.trim();
+    // Selection Sort
+    for (let i = 0; i < rows.length - 1; i++) {
+      let swapIndex = i;
 
-      if (columnIndex === 0 || columnIndex === 5) {
-        // Vehicle Id or Year (numeric)
-        return isAscending ? parseInt(aText) - parseInt(bText) : parseInt(bText) - parseInt(aText);
-      } else {
-        // Text columns
-        return isAscending ? aText.localeCompare(bText) : bText.localeCompare(bText);
+      for (let j = i + 1; j < rows.length; j++) {
+        const aText = rows[swapIndex].cells[columnIndex].textContent.trim();
+        const bText = rows[j].cells[columnIndex].textContent.trim();
+
+        let compare = 0;
+
+        if (columnIndex === 0 || columnIndex === 5) {
+          compare = parseInt(bText) - parseInt(aText);
+        } else {
+          compare = bText.localeCompare(aText);
+        }
+
+        if ((isAscending && compare < 0) || (!isAscending && compare > 0)) {
+          swapIndex = j;
+        }
       }
-    });
+
+      if (swapIndex !== i) {
+        const temp = rows[i];
+        rows[i] = rows[swapIndex];
+        rows[swapIndex] = temp;
+      }
+    }
 
     tbody.innerHTML = "";
     rows.forEach((row) => tbody.appendChild(row));
+
     table.dataset.sortOrder = isAscending ? "asc" : "desc";
   }
+
 </script>
 <script src="../assets/js/auth.js"></script>
 </body>
